# murphurl

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md
.github/workflows/: build-develop.yaml  build-release.yaml  build.yaml  pull-request.yaml  release-build.yaml  staging-build.yaml
src/: db.rs  main.rs  shorten.rs
src/shorten/: bulk_controller.rs  controller.rs  db.rs  file.rs  file_controller.rs  hash.rs  mod.rs  model.rs  response.rs  route_handler.rs  structs.rs  utils.rs
uploads/: empty.xlsx
