[package]
name = "shortenurl"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-rc.1", features = ["openssl"] }
sqlx = {version = "0.5", features = ["postgres", "runtime-actix-native-tls"]}
openssl ="0.10"
postgres-openssl = "0.5.0"
serde = "1"
serde_json = "1"
postgres = "0.19"
dotenv = "0.15"
